fix: Side by side gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 5px;
 }
 
 .tracker-participant {
